modified:   Controllers/AdminController.php 	modified:   Controllers/ApiController.php 	modified:   Controllers/BaseController.php 	modified:   Controllers/LoginController.php 	modified:   Models/UserModel.php 	modified:   Views/admins/login.php 	modified:   Views/userlogins/login.php 	modified:   Views/userlogins/otp.php 	modified:   public/assets/css/login.css

--- a/public/assets/css/login.css
+++ b/public/assets/css/login.css
@@ -54,7 +54,7 @@
 
 .card_login form .btn_otp {
     position: absolute;
-    font-size: 25px;
+    font-size: 20px;
     top: 50%;
     transform: translate(-137px, -50%);
     width: 35%;
@@ -65,6 +65,7 @@
 .card_login form .error_message {
     margin-top: 12px;
     color: red;
+    display: none;
 }
 
 .card_login form button.submit {
