Co-authored-by: minhluan0302 <minhluan0302@users.noreply.github.com>

--- a/public/assets/css/trangchu.css
+++ b/public/assets/css/trangchu.css
@@ -7,9 +7,13 @@
 }
 
 #container .slider img {
-    display: block;
+    display: none;
     width: 100%;
     height: 585px;
+}
+
+#container .slider img.active {
+    display: block;
 }
 
 #container .product_heading {
