--- a/public/assets/css/user/head_foot.css
+++ b/public/assets/css/user/head_foot.css
@@ -461,8 +461,12 @@ hr {
 
 .price_item,
 .price .num_price {
-    cursor: context-menu;
+    cursor: context-men;
     font-size: 1.8rem;
+}
+
+.num_price span {
+    margin-left: 5px;
 }
 
 input[type="number"] {
@@ -487,6 +491,7 @@ input[type="number"]::-webkit-outer-spin-button {
 .price .title {
     font-size: 2rem;
     text-transform: capitalize;
+    text-transform: uppercase;
 }
 
 .card_sub .pay_btn {
@@ -507,4 +512,51 @@ input[type="number"]::-webkit-outer-spin-button {
     box-shadow: 1rem 1rem 3rem rgba(0, 0, 0, 0.4);
     border: 1px solid #000;
     background-color: rgba(0, 0, 0, 0.886);
+}
+
+/* thẻ di chuyển */
+.tag_comeback {
+    padding: 15px 20px;
+}
+
+.tag_comeback li {
+    display: inline-block;
+    font-size: 1.4rem;
+}
+
+.tag_comeback a {
+    padding: 10px 5px;
+    color: #898989;
+}
+
+.tag_comeback li:last-child a {
+    cursor: context-menu;
+    color: #000;
+}
+
+.tag_comeback li:hover a {
+    color: #000;
+}
+
+/* mọi loại nút */
+#container .btn_css {
+    margin: 15px 0 30px;
+}
+
+#container .btn_css a {
+    display: block;
+    margin: 0 auto;
+    padding: 8px 55px;
+    width: max-content;
+    font-size: 1.5rem;
+    text-transform: capitalize;
+    background: #353535;
+    color: #ffffff;
+    border: 1px solid #7f7f7f;
+    transition: 0.3s linear;
+}
+
+#container .btn_css a:hover {
+    background-color: #000000;
+    color: #fff;
 }
