--- a/public/assets/css/user/head_foot.css
+++ b/public/assets/css/user/head_foot.css
@@ -560,3 +560,7 @@ input[type="number"]::-webkit-outer-spin-button {
     background-color: #000000;
     color: #fff;
 }
+
+.showElement {
+    display: block !important;
+}
