--- a/public/assets/css/user/thanhtoan.css
+++ b/public/assets/css/user/thanhtoan.css
@@ -43,6 +43,16 @@
     align-items: center;
 }
 
+.row textarea {
+    width: 100%;
+    height: 100px;
+    padding: 10px 15px;
+    outline: none;
+    resize: none;
+    border: none;
+    border: 1px solid #ccc;
+}
+
 #cach_tra {
     width: 25px;
     height: 25px;
@@ -51,7 +61,6 @@
 
 label {
     font-size: 1.8rem;
-
 }
 
 .right_wrap .card_sub {
@@ -120,4 +129,51 @@ label {
     padding-left: 5px;
     font-size: 3rem !important;
     font-weight: bold;
+}
+
+.modal {
+    display: none;
+    position: fixed;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    background-color: rgba(0, 0, 0, 0.5);
+    z-index: 20;
+}
+
+.congratulate {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    padding: 30px;
+    background-color: #ffffff;
+    height: 276px;
+    width: 500px;
+    z-index: 21;
+}
+
+.modal_main {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.modal_main .hinhanh {
+    width: 30%;
+}
+
+.modal_main .hinhanh img {
+    display: block;
+    width: 100%;
+    margin: 0 auto;
+}
+
+.modal_main p {
+    padding: 30px 0;
+    text-transform: uppercase;
+    font-size: 3.2rem;
+    color: #b9a275;
 }
