--- a/public/assets/css/user/head_foot.css
+++ b/public/assets/css/user/head_foot.css
@@ -532,6 +532,7 @@ input[type="number"]::-webkit-outer-spin-button {
 .tag_comeback li:last-child a {
     cursor: context-menu;
     color: #000;
+    pointer-events: none;
 }
 
 .tag_comeback li:hover a {
