Co-authored-by: minhluan0302 <minhluan0302@users.noreply.github.com>

--- a/public/assets/css/user/trangchu.css
+++ b/public/assets/css/user/trangchu.css
@@ -9,7 +9,7 @@
 #container .slider img {
     display: none;
     width: 100%;
-    height: 585px;
+    /* height: 585px; */
 }
 
 #container .product_heading {
