--- a/public/assets/css/admin/admin.css
+++ b/public/assets/css/admin/admin.css
@@ -72,6 +72,14 @@
     color: black;
 }
 
+.taskbar-menu ul li a {
+    width: 100%;
+    height: 90px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
 .taskbar-item a:hover {
     color: red;
 }
@@ -84,9 +92,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 100%;
     background-color: rgb(210, 210, 210);
-    height: 117px;
     text-align: center;
     border-radius: 8px;
     font-weight: bold;
