--- a/public/assets/css/admin/chitietsanpham.css
+++ b/public/assets/css/admin/chitietsanpham.css
@@ -26,7 +26,7 @@ header {
 
 .AddProduct-form {
     width: 83%;
-    height: 900px;
+    height: auto;
     background-color: rgb(210, 210, 210);
     margin: 100px 16.5%;
     overflow: hidden;
@@ -41,9 +41,11 @@ header {
 
 .mother-box-Add-Product {
     display: flex;
-    height: 90%;
+    min-height: 730px;
+    height: auto;
     flex-wrap: wrap;
     justify-content: space-around;
+    align-content: flex-start;
 }
 
 .General-Information-box {
@@ -51,7 +53,7 @@ header {
     border: 1px black solid;
     width: 48%;
     display: flex;
-    height: 65%;
+    height: 525px;
     flex-wrap: wrap;
     justify-content: space-around;
 }
@@ -61,17 +63,19 @@ header {
     width: 48%;
     border-radius: 8px;
     display: flex;
-    height: 65%;
+    height: 525px;
     flex-wrap: wrap;
     align-content: flex-start;
     justify-content: space-around;
 }
 
 .AddProduct-img {
+    margin-top: 2%;
     border: 1px solid black;
     border-radius: 8px;
     width: 98%;
-    height: 30%;
+    min-height: 30%;
+    height: auto;
 }
 
 .Product-Name-box {
@@ -240,7 +244,6 @@ header {
 .Product-Description-box .Product-Description-textarea {
     width: 96%;
     height: 50%;
-    resize: none;
     margin: 0% 0% 0% 2%;
     border-radius: 4px;
     font-size: 1rem;
@@ -249,6 +252,10 @@ header {
     border: 1px solid black;
     background-color: rgb(230, 230, 230);
     box-shadow: 5px 10px 10px rgba(0, 0, 0, 0.5);
+}
+
+textarea {
+    resize: none;
 }
 
 .Meta-Data-box table {
@@ -272,13 +279,13 @@ h2 {
 
 .displayImg {
     width: 100%;
-    height: 80%;
     display: flex;
+    flex-wrap: wrap;
     justify-content: flex-start;
     align-items: center;
 }
 
 .displayImg img {
-    height: 80%;
-    margin-left: 5px;
+    max-height: 125px;
+    margin: 5px;
 }
