--- a/public/assets/css/admin/sanpham.css
+++ b/public/assets/css/admin/sanpham.css
@@ -42,7 +42,7 @@ a {
 }
 
 .table-box td {
-  padding: 5px 0%;
+  margin: 5px 0%;
 }
 
 .table-box tr td:last-child {
@@ -60,6 +60,18 @@ a {
   -webkit-line-clamp: 1;
   display: -webkit-box;
   -webkit-box-orient: vertical;
+}
+
+.table-box tbody tr td:nth-child(2) {
+  text-align: center;
+}
+
+.table-box tbody tr td:nth-child(3) {
+  text-align: center;
+}
+
+.table-box tbody tr td:nth-child(4) {
+  text-align: center;
 }
 
 header {
@@ -106,6 +118,7 @@ input#search {
   border-radius: 4px;
   margin-right: 3px;
 }
+
 .pagination .active {
   background-color: #f00;
   color: #fff;
