--- a/public/assets/css/admin/admin.css
+++ b/public/assets/css/admin/admin.css
@@ -4,6 +4,10 @@
     box-sizing: border-box;
 }
 
+a {
+    color: black;
+}
+
 .logo-img {
     display: flex;
 }
@@ -18,40 +22,20 @@
     display: flex;
     right: 0;
     z-index: 5;
+    justify-content: space-between;
 }
 
-.flex-box .flex~.flex {
-    margin-left: 10px;
-}
-
-.flex-box {
-    margin-top: 30px;
-    display: flex;
-    font-size: 30px;
-}
-
-.flex-box a {
+.log-out a {
+    font-size: 25px;
     text-decoration: none;
-    color: #000000;
+    color: black;
 }
 
-.footer {
-    background-color: white;
-    width: 83%;
-    height: 105px;
-    position: fixed;
-    left: 16.5%;
-    bottom: 0;
+.log-out {
     display: flex;
-    flex-wrap: wrap;
-    flex-direction: row-reverse;
-    align-items: flex-end;
-    justify-content: flex-start;
-    z-index: 20;
-}
-
-.contact {
-    text-align: right;
+    align-items: center;
+    text-align: center;
+    margin: 0 5px 0 0;
 }
 
 .taskbar-menu {
