--- a/public/assets/css/admin/danhmuc.css
+++ b/public/assets/css/admin/danhmuc.css
@@ -14,8 +14,7 @@
 
 .box {
     border: 1px black solid;
-    min-width: 325px;
-    width: 325px;
+    max-width: 300px;
     height: 490px;
     border-radius: 4px;
     text-align: center;
