--- a/public/assets/css/admin/sanpham.css
+++ b/public/assets/css/admin/sanpham.css
@@ -1,3 +1,12 @@
+a {
+  text-decoration: none;
+}
+
+.add-product {
+  padding: 1.1% 0%;
+  font-size: 1.3rem;
+}
+
 .Product-list-form {
   width: 83%;
   height: 500px;
@@ -17,14 +26,7 @@
   border-radius: 8px;
 }
 
-a {
-  text-decoration: none;
-}
 
-.add-product {
-  padding: 1.1% 0%;
-  font-size: 1.3rem;
-}
 
 .mother-box.table-box {
   height: 100%;
@@ -35,25 +37,26 @@ a {
 .table-box {
   width: 100%;
   font-size: 24px;
+  border-collapse: collapse;
 }
 
 .table-box tbody tr:nth-child(odd) {
   background-color: rgb(171, 162, 162);
 }
 
+.table-box thead {
+  font-size: 30px;
+}
+
 .table-box td {
-  margin: 5px 0%;
+  padding: 0.35% 0;
 }
 
-.table-box tr td:last-child {
-  width: 65px;
-  font-size: 15px;
+.table-box th:nth-child(1) {
+  width: 65%;
 }
 
-.table-box tr th:nth-child(2) {
-  width: 100px;
-  font-size: 1.2rem;
-}
+
 
 .table-box tr td:first-child {
   overflow: hidden;
