Co-authored-by: minhluan0302 <minhluan0302@users.noreply.github.com>

--- a/public/assets/css/user/taikhoan.css
+++ b/public/assets/css/user/taikhoan.css
@@ -193,7 +193,7 @@
 }
 
 /* ẩn để css */
-.acc_infor {
+/* .acc_infor {
     display: none;
 }
 
@@ -203,4 +203,4 @@
 
 .acc_my-order {
     display: none;
-}
+} */
