--- a/public/assets/css/user/sanpham.css
+++ b/public/assets/css/user/sanpham.css
@@ -103,3 +103,12 @@
     color: #fff;
     transition: linear 0.3s;
 }
+
+.none-found_product {
+    position: relative;
+    padding: 80px 0;
+}
+
+.not-found {
+    font-size: 1.5rem;
+}
