--- a/public/assets/css/admin/chitietdonhang.css
+++ b/public/assets/css/admin/chitietdonhang.css
@@ -28,7 +28,6 @@ header {
 .Infor-form {
     width: 55%;
     height: 90%;
-    border: 1px black solid;
     border-radius: 4px;
     display: flex;
     flex-wrap: wrap;
@@ -36,30 +35,9 @@ header {
     align-content: space-around;
 }
 
-.name {
+.act {
     width: 48%;
-    height: 15%;
-    border: 1px black solid;
-    padding: 1%;
-}
-
-.location {
-    width: 48%;
-    height: 15%;
-    border: 1px black solid;
-    padding: 1%;
-}
-
-.P-number {
-    width: 48%;
-    height: 15%;
-    border: 1px black solid;
-    padding: 1%;
-}
-
-.mail {
-    width: 48%;
-    height: 15%;
+    height: 18%;
     border: 1px black solid;
     padding: 1%;
 }
@@ -119,6 +97,11 @@ select {
     padding: 1%;
 }
 
+.list-item .li-price {
+    width: 85px;
+    text-align: right;
+}
+
 .li-item {
     width: 100%;
     height: 20%;
@@ -129,6 +112,7 @@ select {
     flex-wrap: nowrap;
     justify-content: space-around;
     align-items: center;
+    background-color: #fef1f1;
 }
 
 .list-item .li-item~.li-item {
@@ -153,6 +137,15 @@ select {
 
 .li-name {
     font-weight: bold;
+
+}
+
+.li-name a {
+    overflow: hidden;
+    -webkit-line-clamp: 1;
+    -webkit-box-orient: vertical;
+    text-overflow: ellipsis;
+    display: -webkit-box;
 }
 
 .li-describe {
