--- a/public/assets/css/admin/donhang.css
+++ b/public/assets/css/admin/donhang.css
@@ -134,3 +134,9 @@ select {
     margin-right: 3px;
     color: black;
 }
+
+.pagination .active {
+    background-color: #f00;
+    color: #fff;
+    font-weight: bold;
+}
