--- a/public/assets/css/admin/chitietdonhang.css
+++ b/public/assets/css/admin/chitietdonhang.css
@@ -37,9 +37,19 @@ header {
 
 .act {
     width: 48%;
-    height: 18%;
+    height: 20%;
     border: 1px black solid;
     padding: 1%;
+}
+
+.act p {
+    font-size: 1.1rem;
+    font-weight: bold;
+    overflow: hidden;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+    text-overflow: ellipsis;
+    display: -webkit-box;
 }
 
 input {
@@ -47,12 +57,6 @@ input {
     margin: 2% 0% 0% 0%;
 }
 
-.status {
-    width: 98%;
-    height: 17%;
-    border: 1px black solid;
-    padding: 1%;
-}
 
 select {
     width: 98%;
@@ -104,7 +108,7 @@ select {
 
 .li-item {
     width: 100%;
-    height: 20%;
+    height: 25%;
     border: 1px black solid;
     padding: 1%;
     display: flex;
@@ -137,7 +141,6 @@ select {
 
 .li-name {
     font-weight: bold;
-
 }
 
 .li-name a {
