--- a/public/assets/css/user/head_foot.css
+++ b/public/assets/css/user/head_foot.css
@@ -709,3 +709,9 @@ p.sold-out_text {
 .product_price {
   margin-top: 10px;
 }
+
+
+/* css chức năng */
+.showElement {
+  display: block !important;
+}
